[package]
name = "daily_exp_sum"
description = "Set wallpaper based on the current date"
license = "MIT"
homepage = "https://github.com/szeist/daily-exp-sum"
version = "0.0.9"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = "4.5.27"
num-complex = "0.4.6"
plotters = "0.3.7"
tempfile = "3.13.0"
wallpaper = "3.2.0"

[target."cfg(windows)".dependencies]
windows = { version = "0.58.0", features = ["System_UserProfile", "Storage"] }
